crates/murphy-plugin-macros/tests/ui/fail_node_pattern_quantifier_in_union_arm.stderr
error: def_node_matcher!: pattern parse error: postfix `*` / `+` / `?` is only valid as a direct child of a node match (at 1..5)
 --> tests/ui/fail_node_pattern_quantifier_in_union_arm.rs:4:44
  |
4 | murphy_plugin_macros::def_node_matcher!(m, "{int+ sym}");
  |                                            ^^^^^^^^^^^^
