crates/murphy-plugin-macros/tests/ui/fail_node_pattern_quantifier_in_union_arm.rs
// A `{}` union arm is not a node child position, so a quantifier may not
// appear inside it (murphy-ycx). The parser rejects this before lowering.

murphy_plugin_macros::def_node_matcher!(m, "{int+ sym}");

fn main() {}
